@@ -1,4 +1,4 @@
 #!/usr/bin/env bash
 
-java-run-spring-boot-dev-profile-v2.sh maven 8484 JJEPTECH1
+java-run-spring-boot-dev-profile-v2.sh maven 8484 JJEPTECH1 --add-opens=java.base/java.time=ALL-UNNAMED
 
